blog-details-done

--- a/src/index.html
+++ b/src/index.html
@@ -55,12 +55,13 @@
             </ul>
           </li>
           <li class="dropdown-item">
-            <button class="dropdown-btn">Portfoio <i class="hgi-stroke hgi-arrow-down-01 text-lg"></i></button>
+            <button class="dropdown-btn">Blogs <i class="hgi-stroke hgi-arrow-down-01 text-lg"></i></button>
 
             <ul class="dropdown-menu">
-              <li><a class="menu-link" href="portfolio-1.html">Portfolio 1</a></li>
-              <li><a class="menu-link" href="portfolio-2.html">Portfolio 2</a></li>
-              <li><a class="menu-link" href="portfolio-details.html">Portfolio Details</a></li>
+              <li><a class="menu-link" href="blogs.html">Blog</a></li>
+              <li><a class="menu-link" href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
+              <li><a class="menu-link" href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
+              <li><a class="menu-link" href="blog-details.html">Blog Details</a></li>
             </ul>
           </li>
           <li class="dropdown-item">
@@ -78,9 +79,7 @@
           <li class="dropdown-item">
             <button class="dropdown-btn">Pages <i class="hgi-stroke hgi-arrow-down-01 text-lg"></i></button>
             <ul class="dropdown-menu">
-              <li><a class="menu-link" href="blogs.html">Blogs</a></li>
-              <li><a class="menu-link" href="blog-details.html">Blog Details</a></li>
-              <li><a class="menu-link" href="farmers.html">Farmers</a></li>
+
               <li><a class="menu-link" href="faqs.html">Faqs</a></li>
               <li><a class="menu-link" href="pricing.html">Pricing</a></li>
               <li><a class="menu-link" href="contact-us.html">Contact</a></li>
