all-inner-pages-done

--- a/src/index-4.html
+++ b/src/index-4.html
@@ -79,6 +79,8 @@
             <button class="dropdown-btn">Pages <i class="hgi-stroke hgi-arrow-down-01 text-lg"></i></button>
             <ul class="dropdown-menu">
 
+              <li><a class="menu-link" href="team.html">Team</a></li>
+              <li><a class="menu-link" href="testimonial.html">Testimonial</a></li>
               <li><a class="menu-link" href="faqs.html">Faqs</a></li>
               <li><a class="menu-link" href="pricing.html">Pricing</a></li>
               <li><a class="menu-link" href="contact-us.html">Contact</a></li>
