--- a/src/wishlist.html
+++ b/src/wishlist.html
@@ -74,6 +74,8 @@
             <button class="dropdown-btn">Pages <i class="hgi-stroke hgi-arrow-down-01 text-lg"></i></button>
             <ul class="dropdown-menu">
 
+              <li><a class="menu-link" href="team.html">Team</a></li>
+              <li><a class="menu-link" href="testimonial.html">Testimonial</a></li>
               <li><a class="menu-link" href="faqs.html">Faqs</a></li>
               <li><a class="menu-link" href="pricing.html">Pricing</a></li>
               <li><a class="menu-link" href="contact-us.html">Contact</a></li>
@@ -410,7 +412,7 @@
               <div class="md:max-w-[637px] ">
                 <h2 class="h1 reveal_anim lg:mb-3 mb-2 text-neutral-900">Reach Out Anytime for Expert Support</h2>
                 <p class="xl:mb-8 lg:mb-6 mb-5 md:text-lg text-base text-gray-800">Our team is here to assist you with personalized care, expert guidance, and support whenever you need it.</p>
-                <a href="#0" type="submit" class="btn-primary">GET IN TOUCH<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700"></i></a>
+                <a href="contact-us.html" type="submit" class="btn-primary">GET IN TOUCH<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700"></i></a>
               </div>
               <div class="md:max-w-[384px] w-full">
                 <h4 class="xl:mb-5 lg:mb-4 mb-4">Operational Hour</h4>
@@ -462,11 +464,11 @@
           <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Quick Links</p>
           <ul class="space-y-4">
             <li><a href="index.html" class="link xxl:text-lg text-base" >Home</a></li>
-            <li><a href="about.html" class="link xxl:text-lg text-base" >About Us</a></li>
-            <li><a href="about.html" class="link xxl:text-lg text-base" >Services</a></li>
+            <li><a href="about-us.html" class="link xxl:text-lg text-base" >About Us</a></li>
+            <li><a href="services.html" class="link xxl:text-lg text-base" >Services</a></li>
             <li><a href="blogs.html" class="link xxl:text-lg text-base" >Blogs</a></li>
-            <li><a href="#0" class="link xxl:text-lg text-base" >Shop</a></li>
-            <li><a href="#0" class="link xxl:text-lg text-base" >Contact Us</a></li>
+            <li><a href="shop.html" class="link xxl:text-lg text-base" >Shop</a></li>
+            <li><a href="contact-us.html" class="link xxl:text-lg text-base" >Contact Us</a></li>
           </ul>
         </div>
         <div data-reveal-from="bottom" class="col-span-12 sm:col-span-6 lg:col-span-3 flex lg:justify-center reveal_anim">
@@ -474,11 +476,11 @@
             <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Services</p>
             <ul class="space-y-4">
               <li><a href="index.html" class="link xxl:text-lg text-base" >Physiotherapy</a></li>
-              <li><a href="index.html" class="link xxl:text-lg text-base" >Rehabilitation Center</a></li>
-              <li><a href="index.html" class="link xxl:text-lg text-base" >Massage Therapy</a></li>
-              <li><a href="index.html" class="link xxl:text-lg text-base" >Group Therapy</a></li>
-              <li><a href="index.html" class="link xxl:text-lg text-base" >Chiropractic Care</a></li>
-              <li><a href="index.html" class="link xxl:text-lg text-base" >Psychological Counseling</a></li>
+              <li><a href="index-2.html" class="link xxl:text-lg text-base" >Rehabilitation Center</a></li>
+              <li><a href="index-3.html" class="link xxl:text-lg text-base" >Massage Therapy</a></li>
+              <li><a href="index-4.html" class="link xxl:text-lg text-base" >Group Therapy</a></li>
+              <li><a href="index-5.html" class="link xxl:text-lg text-base" >Chiropractic Care</a></li>
+              <li><a href="index-6.html" class="link xxl:text-lg text-base" >Psychological Counseling</a></li>
             </ul>
           </div>
         </div>
