--- a/src/index-2.html
+++ b/src/index-2.html
@@ -25,25 +25,65 @@
     <include-loader />
 
     <!-- banner section start -->
-    <section class="banner-two overflow-hidden bg-cover" data-bg="./assets/images/banner2-bg.webp">
-      <div class="cont pt-32 pb-20 md:pb-28 xl:py-48 xxl:py-52 gap-4 grid grid-cols-12 items-end relative z-[2]">
-        <div class="col-span-12 md:col-span-7">
-          <p class="small-text-1 text-xl text-neutral-0 mb-3">Welcome To WellHub</p>
-          <h2 class="big-text one">Farm</h2>
-          <h2 class="big-text md:hidden two">Simplified</h2>
-        </div>
-        <div class="col-span-12 md:col-span-5">
-          <p class="small-text-2 text-xl text-neutral-0 mb-6 xl:mb-10">Through personalized care and expert guidance, we help you regain strength, improve mobility, and restore</p>
-          <a href="about.html" class="btn-primary">About Us <i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700"></i></a>
-        </div>
-        <div class="col-span-12 flex items-center flex-wrap gap-1">
-          <img src="./assets/images/leaf.png" alt="" />
-          <h2 class="big-text max-md:hidden two">Simplified</h2>
+    <div class="banner pt-[228px] pb-[325px] bg-cover relative after:absolute after:inset-0 after:h-full after:w-full after:opacity-70 after:bg-neutral-900 z-[1] after:z-[-1]" data-bg="assets/images/home1/banner-bg2.webp">         
+      <div class="max-w-[1800px] mx-auto">
+        <div class="flex lg:flex-nowrap flex-wrap lg:gap-0 gap-3 items-end justify-between px-2 pb-120">
+            <div>
+                <span class=" xl:mb-4 lg:mb-3 mb-3 inline-block uppercase lg:text-base md:text-sm text-[12px] py-2 font-medium text-neutral-0 px-4 bg-gradient-to-r from-[rgba(255,200,59,0.24)] to-[rgba(255,200,59,0.24)] rounded-full title_anim" data-fade-from="left">YOUR PATH TO A HEALTHIER MINF</span>
+                <h1 class="display-1 leading-[120%] flex items-center gap-3 fw-black text-neutral-0 title_anim" data-fade-from="left">
+                  Strength <img src="assets/images/home1/renewed.png" alt="img" class="rounded-full w-[250px] h-[100px]"> Renewed
+                </h1>
+                <h2 class="display-1 leading-[120%] flex items-center xxl:gap-8 xl:gap-6 gap-3 text-neutral-0 title_anim" data-fade-from="bottom">
+                  Reclaim Your Life 
+                  <svg width="176" height="57" viewBox="0 0 176 57" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M144 1C145.008 8.80976 152.615 25.4446 174.984 29.5056" stroke="white" stroke-width="2"/>
+                    <path d="M144 56.7715C145.008 49.3013 152.615 33.3897 174.984 29.5052" stroke="white" stroke-width="2"/>
+                    <path d="M0 29L175.5 29" stroke="white" stroke-width="2"/>
+                  </svg>                    
+                </h2>
+            </div>
+            <div class="flex sm:flex-nowrap flex-wrap gap-x-3 lg:gap-x-4 sm:gap-y-0 gap-y-3">
+                <a href="contact-us.html" class="bg-yellow-300 text-base hover:text-neutral-0 leading-1 font-semibold uppercase  flex items-center gap-x-2 lg:gap-x-4 py-1.5 pe-2 ps-6 rounded-full learn-more duration-500 group hover:bg-neutral-600">
+                    BOOK AN APPOINTMENT
+                    <i class="hgi-stroke hgi-arrow-up-right-01 group-hover:text-neutral-600 duration-300 xl:text-xl text-lg text-neutral-0 xl:w-12 w-9 xl:h-12 h-9 flex items-center justify-center bg-neutral-600 group-hover:bg-yellow-300 rounded-full"></i>
+                </a>
+                <a href="about-us.html" class="learn-more bg-neutral-0 rounded-full py-3 px-7 flex items-center justify-center group hover:bg-yellow-300 duration-500 font-semibold">EXPLORE MORE</a>
+            </div>
         </div>
       </div>
-    </section>
-    <!-- banner section end -->
-
+    </div>
+    <div class="max-w-[1800px] mx-auto mt-[-200px] relative z-[1] pb-120">
+      <div class="grid grid-cols-12 xxl:gap-6 gap-4">
+        <div class="col-start-1 md:col-span-5 col-span-12">
+          <img src="assets/images/about/counter-thumb1.webp" alt="img" class="w-full reveal_anim" data-reveal-from="right">
+        </div>
+        <div class="col-end-13 md:col-start-6 col-span-12">
+          <div class="grid grid-cols-12 xxl:gap-6 gap-4 xxl:mb-8 xl:mb-6 lg:mb-2 mb-2">
+            <div class="xs:col-span-6 col-span-12">
+              <img src="assets/images/about/counter-thumb2.webp" alt="img" class="w-full reveal_anim" data-reveal-from="left">
+            </div>
+            <div class="xs:col-span-6 col-span-12">
+              <img src="assets/images/about/counter-thumb3.webp" alt="img" class="w-full reveal_anim" data-reveal-from="right">
+            </div>
+          </div>
+          <div class=" flex xs:flex-nowrap flex-wrap items-center xxl:gap-20 xl:gap-10 lg:gap-9 gap-6">
+            <div>
+              <h2 class="text-green-300 display-2 mb-3">25+</h2>
+              <p class="xl:text-lg text-base text-neutral-900 font-medium">Years of experience</p>
+            </div>
+            <div>
+              <h2 class="text-green-300 display-2 mb-3">60+</h2>
+              <p class="xl:text-lg text-base text-neutral-900 font-medium">Trained People</p>
+            </div>
+            <div>
+              <h2 class="text-green-300 display-2 mb-3">12k+</h2>
+              <p class="xl:text-lg text-base text-neutral-900 font-medium">Satisfied Client</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
     <!-- feature section start -->
     <section class="bg-green-50 overflow-hidden grid grid-cols-1 sm:grid-cols-2 xxl:grid-cols-4 xxl:divide-x divide-neutral-60">
       <div class="flex gap-4 items-center xxl:justify-center py-8 px-4 lg:py-12 xl:py-14 reveal_anim">
