--- a/src/request-quote.html
+++ b/src/request-quote.html
@@ -30,11 +30,11 @@
             <button class="dropdown-btn">Home <i class="hgi-stroke hgi-arrow-down-01 text-lg"></i></button>
             <ul class="dropdown-menu">
               <li><a class="menu-link" href="index.html">Physiotherapy</a></li>
-              <li><a class="menu-link" href="index-2.html">Agro Service</a></li>
-              <li><a class="menu-link" href="index-3.html">Dairy Farm</a></li>
-              <li><a class="menu-link" href="index-4.html">Organic Farm</a></li>
-              <li><a class="menu-link" href="index-5.html">Equipment Store</a></li>
-              <li><a class="menu-link" href="index-6.html">Farm Shop</a></li>
+              <li><a class="menu-link" href="index-2.html">Rehabilitation Center</a></li>
+              <li><a class="menu-link" href="index-3.html">Psychology Homepage</a></li>
+              <li><a class="menu-link" href="index-4.html">Group therapy</a></li>
+              <li><a class="menu-link" href="index-5.html">Massage Center</a></li>
+              <li><a class="menu-link" href="index-6.html">Chiropractor</a></li>
             </ul>
           </li>
           <li>
