--- a/src/index-2.html
+++ b/src/index-2.html
@@ -555,6 +555,36 @@
       <img src="assets/images/element/lock-ele.png" alt="img" class="absolute end-[100px] top-[120px] xl:block hidden">
     </section>
     <!-- Mission section end -->
+
+    <!-- Counter section Start -->
+    <div class="py-120 relative after:absolute after:w-full after:h-full after:top-0 after:start-0 after:bg-neutral-900 after:opacity-80" data-bg="./assets/images/global/counter-bg1.webp">
+      <div class="cont flex gap-5 flex-wrap justify-between relative z-[1]">  
+          <div class="reveal_anim" data-delay=".3s">
+            <span class="w-2 h-2 bg-yellow-300 block lg:mb-4 mb-3"></span>
+            <h5 class="text-neutral-0 font-roboto xxl:mb-20 xl:mb-12 md:mb-8 mb-3 block">A dedicated team of</h5>
+            <h1 class="display-1 text-neutral-0 font-roboto">02</h1>
+          </div>
+          <div class="reveal_anim h-100 md:border-l border-gray-600 lg:ps-8 md:ps-2" data-delay=".3s">
+            <span class="w-2 h-2 bg-yellow-300 block lg:mb-4 mb-3"></span>
+            <h5 class="text-neutral-0 font-roboto xxl:mb-20 xl:mb-12 md:mb-8 mb-3 block">Years of experience</h5>
+            <h1 class="display-1 text-neutral-0 font-roboto">16+</h1>
+          </div>
+          <div class="reveal_anim h-100 md:border-l border-gray-600 lg:ps-8 md:ps-2" data-delay=".3s">
+            <span class="w-2 h-2 bg-yellow-300 block lg:mb-4 mb-3"></span>
+            <h5 class="text-neutral-0 font-roboto xxl:mb-20 xl:mb-12 md:mb-8 mb-3 block">Active clients</h5>
+            <h1 class="display-1 text-neutral-0 font-roboto">52</h1>
+          </div>
+          <div class="reveal_anim h-100 md:border-l border-gray-600 lg:ps-8 md:ps-2" data-delay=".3s">
+            <span class="w-2 h-2 bg-yellow-300 block lg:mb-4 mb-3"></span>
+            <h5 class="text-neutral-0 font-roboto xxl:mb-20 xl:mb-12 md:mb-8 mb-3 block">Successful strategies this year</h5>
+            <h1 class="display-1 text-neutral-0 font-roboto">16</h1>
+          </div>
+      </div>
+    </div>
+    <!-- Counter section end -->
+
+
+
     
 
 
