home2-testimonial-two-done

--- a/src/index-2.html
+++ b/src/index-2.html
@@ -583,6 +583,149 @@
     </div>
     <!-- Counter section end -->
 
+    <!-- Testimonial section Start -->
+    <section class="relative z-[1] py-120 bg-neutral-20 overflow-hidden">
+      <div class="cont grid items-center grid-cols-12 gap-6">
+        <div class="col-start-1 sm:col-span-7 col-span-12 relative">
+          <div class="swiper testimonial5-wrappers max-w-[520px]">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="single-item bg-neutral-0 border border-neutral-40 rounded-2xl lg:p-9 p-5">
+                        <div class="flex items-center gap-1 xxl:mb-5 mb-3">
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                        </div>
+                        <p class="text-neutral-400 lg:text-lg text-base xl:mb-10 lg:mb-8 mb-7">
+                          Thanks to the amazing team, my recovery has been nothing short of incredible. Their personalized care and constant support made all the difference. I’m truly grateful for their expertise and commitment.
+                        </p>
+                        <div class="flex items-center gap-3">
+                            <div class="img-area overflow-hidden rounded-full size-14">
+                                <img class="profile-img rounded-full" src="assets/images/testimonial/john-test1.png" alt="Image">
+                            </div>
+                            <div>
+                              <span class="font-semibold text-neutral-900">John Doe</span>
+                              <p class="text-sm text-neutral-400">Physiotherapy Specialist</p>
+                            </div>
+                        </div>
+                        <div class="border-b border-neutral-40 xxl:my-16 xl:my-12 md:my-8 my-7"></div>
+                        <div class="flex items-center gap-2">
+                          <div class="btn-primary lg:!px-6 !px-5 lg:!py-[14px] !py-[11px] border border-green-300">242 of 324</div>
+                          <a href="about-us.html" class="btn-primary border border-neutral-40 hover:!bg-green-300 hover:!text-neutral-0 !bg-neutral-0 lg:!px-6 !px-5 lg:!py-[14px] !py-[11px] !text-neutral-900">Read more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="single-item bg-neutral-0 border border-neutral-40 rounded-2xl lg:p-9 p-5">
+                        <div class="flex items-center gap-1 xxl:mb-5 mb-3">
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                        </div>
+                        <p class="text-neutral-400 lg:text-lg text-base xl:mb-10 lg:mb-8 mb-7">
+                          Thanks to the amazing team, my recovery has been nothing short of incredible. Their personalized care and constant support made all the difference. I’m truly grateful for their expertise and commitment.
+                        </p>
+                        <div class="flex items-center gap-3">
+                            <div class="img-area overflow-hidden rounded-full size-14">
+                                <img class="profile-img rounded-full" src="assets/images/testimonial/john-test1.png" alt="Image">
+                            </div>
+                            <div>
+                              <span class="font-semibold text-neutral-900">John Doe</span>
+                              <p class="text-sm text-neutral-400">Physiotherapy Specialist</p>
+                            </div>
+                        </div>
+                        <div class="border-b border-neutral-40 xxl:my-16 xl:my-12 md:my-8 my-7"></div>
+                        <div class="flex items-center gap-2">
+                          <div class="btn-primary lg:!px-6 !px-5 lg:!py-[14px] !py-[11px] border border-green-300">242 of 324</div>
+                          <a href="about-us.html" class="btn-primary border border-neutral-40 hover:!bg-green-300 hover:!text-neutral-0 !bg-neutral-0 lg:!px-6 !px-5 lg:!py-[14px] !py-[11px] !text-neutral-900">Read more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="single-item bg-neutral-0 border border-neutral-40 rounded-2xl lg:p-9 p-5">
+                        <div class="flex items-center gap-1 xxl:mb-5 mb-3">
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                        </div>
+                        <p class="text-neutral-400 lg:text-lg text-base xl:mb-10 lg:mb-8 mb-7">
+                          Thanks to the amazing team, my recovery has been nothing short of incredible. Their personalized care and constant support made all the difference. I’m truly grateful for their expertise and commitment.
+                        </p>
+                        <div class="flex items-center gap-3">
+                            <div class="img-area overflow-hidden rounded-full size-14">
+                                <img class="profile-img rounded-full" src="assets/images/testimonial/john-test1.png" alt="Image">
+                            </div>
+                            <div>
+                              <span class="font-semibold text-neutral-900">John Doe</span>
+                              <p class="text-sm text-neutral-400">Physiotherapy Specialist</p>
+                            </div>
+                        </div>
+                        <div class="border-b border-neutral-40 xxl:my-16 xl:my-12 md:my-8 my-7"></div>
+                        <div class="flex items-center gap-2">
+                          <div class="btn-primary lg:!px-6 !px-5 lg:!py-[14px] !py-[11px] border border-green-300">242 of 324</div>
+                          <a href="about-us.html" class="btn-primary border border-neutral-40 hover:!bg-green-300 hover:!text-neutral-0 !bg-neutral-0 lg:!px-6 !px-5 lg:!py-[14px] !py-[11px] !text-neutral-900">Read more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="single-item bg-neutral-0 border border-neutral-40 rounded-2xl lg:p-9 p-5">
+                        <div class="flex items-center gap-1 xxl:mb-5 mb-3">
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                          <span class="text-xl text-yellow-300"><i class="hgi hgi-stroke hgi-star"></i></span>
+                        </div>
+                        <p class="text-neutral-400 lg:text-lg text-base xl:mb-10 lg:mb-8 mb-7">
+                          Thanks to the amazing team, my recovery has been nothing short of incredible. Their personalized care and constant support made all the difference. I’m truly grateful for their expertise and commitment.
+                        </p>
+                        <div class="flex items-center gap-3">
+                            <div class="img-area overflow-hidden rounded-full size-14">
+                                <img class="profile-img rounded-full" src="assets/images/testimonial/john-test1.png" alt="Image">
+                            </div>
+                            <div>
+                              <span class="font-semibold text-neutral-900">John Doe</span>
+                              <p class="text-sm text-neutral-400">Physiotherapy Specialist</p>
+                            </div>
+                        </div>
+                        <div class="border-b border-neutral-40 xxl:my-16 xl:my-12 md:my-8 my-7"></div>
+                        <div class="flex items-center gap-2">
+                          <div class="btn-primary lg:!px-6 !px-5 lg:!py-[14px] !py-[11px] border border-green-300">242 of 324</div>
+                          <a href="about-us.html" class="btn-primary border border-neutral-40 hover:!bg-green-300 hover:!text-neutral-0 !bg-neutral-0 lg:!px-6 !px-5 lg:!py-[14px] !py-[11px] !text-neutral-900">Read more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <div class="xl:absolute xl:w-full xl:top-[50%] xl:translate-y-[-50%] flex items-center xl:justify-between justify-center gap-4 xl:mt-0 mt-5">
+            <button class="prev-review navigation-btn group hover:!border-green-300 text-neutral-900">
+              <i class="hgi hgi-stroke hgi-arrow-left-01"></i>
+            </button>
+            <button class="next-review navigation-btn group hover:!border-green-300 text-neutral-900">
+              <i class="hgi hgi-stroke hgi-arrow-right-01"></i>
+            </button>
+          </div>
+        </div>
+        <div class="col-end-13 sm:col-span-5 col-span-12">
+          <div class="max-w-[320px] sm:ps-0 ps-2 sm:mx-auto fade_anim">
+            <p class="sub-heading mb-4 fade_anim"><span class="bg-yellow-300 w-2 h-2 block rounded-full"></span>TESTIMONIALS</p>
+            <h2>What our <br> clients say</h2>
+          </div>
+        </div>
+      </div>
+      <img src="assets/images/element/article-ele.png" alt="img" class="absolute end-0 top-[150px] rots z-[-1]">
+      <img src="assets/images/element/flower-circle.png" alt="img" class="absolute top-[180px] circle start-[-140px] max-w-[300px] xl:block hidden">
+      <img src="assets/images/element/testimonial-vector.png" alt="img" class="absolute bottom-[120px] right-[200px] z-[-1]">
+      <img src="assets/images/element/line-dash.png" alt="img" class="absolute top-[100px] left-[70px] z-[-1]">
+    </section>
+    <!-- Testimonial section end -->
+
 
 
     
